--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   今天再撲殺新增感染的一場，共計撲殺１萬7686隻土雞，動物防疫所派消毒車，針對大城鄉養畜禽場周邊環境加強消毒工作">
   <meta name="amp-script-src" content="">
   <title>宗榮蛋品企業社變混蛋</title>
-  <link rel="canonical" href="http://zong-rong.mobirisesite.com/">
+  <link rel="canonical" href="http://https://zongrong.ml/">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
 <noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100,300,400,500,700,900&display=swap" rel="stylesheet">
